# bcc-prelude

./: README.md  bors.toml  cabal.project  default.nix  release.nix  shell.nix
bcc-prelude/: LICENSE  README.md  bcc-prelude.cabal
bcc-prelude-test/: LICENSE  bcc-prelude-test.cabal
bcc-prelude-test/src/Test/Bcc/: Prelude.hs
bcc-prelude-test/src/Test/Bcc/Prelude/: Base16.hs  Gen.hs  Golden.hs  Helpers.hs  Orphans.hs  Tripping.hs
bcc-prelude-test/src/Test/Bcc/Prelude/QuickCheck/: Arbitrary.hs  Property.hs
bcc-prelude-test/test/: test.hs
bcc-prelude-test/test/Test/Bcc/Prelude/GHC/Heap/: NormalFormSpec.hs  SizeSpec.hs  TreeSpec.hs
bcc-prelude/cbits/: closure_size.c  hashset.c  hashset.h  worklist.c  worklist.h
bcc-prelude/src/Bcc/: Prelude.hs
bcc-prelude/src/Bcc/Prelude/: Base.hs  Error.hs  Formatting.hs  HeapWords.hs  Orphans.hs  Strict.hs
bcc-prelude/src/Bcc/Prelude/GHC/: Heap.hs
bcc-prelude/src/Bcc/Prelude/GHC/Heap/: NormalForm.hs  Size.hs  Tree.hs
bcc-prelude/src/Bcc/Prelude/Json/: Canonical.hs  Parse.hs
ci/: check-hydra.sh
nix/: default.nix  haskell.nix  pkgs.nix  sources.json  util.nix
scripts/brittany/: config.yaml
scripts/buildkite/: default.nix
