cabal-version: 2.2

name:                 bcc-prelude-test
version:              0.1.0.0
synopsis:             Utility types and functions for testing Bcc
description:          Utility types and functions for testing Bcc
license:              MIT
license-file:         LICENSE
author:               The-Blockchain-Company
maintainer:           operations@blockchain-company.io
copyright:            2021 The-Blockchain-Company
category:             Currency
build-type:           Simple

flag development
  description: Disable `-Werror`
  default: False
  manual: True

library
  hs-source-dirs:     src
  exposed-modules:    Test.Bcc.Prelude
  other-modules:      Test.Bcc.Prelude.Base16
                      Test.Bcc.Prelude.Gen
                      Test.Bcc.Prelude.Golden
                      Test.Bcc.Prelude.Helpers
                      Test.Bcc.Prelude.Orphans
                      Test.Bcc.Prelude.QuickCheck.Arbitrary
                      Test.Bcc.Prelude.QuickCheck.Property
                      Test.Bcc.Prelude.Tripping
  build-depends:      base
                    , aeson
                    , aeson-pretty >= 0.8.5
                    , attoparsec
                    , base16-bytestring >= 1
                    , bytestring
                    , canonical-json
                    , bcc-prelude
                    , containers
                    , cryptonite
                    , formatting
                    , hedgehog
                    , hspec
                    , pretty-show
                    , QuickCheck
                    , quickcheck-instances
                    , template-haskell
                    , text
                    , time
  default-language:   Haskell2010
  default-extensions: NoImplicitPrelude
  ghc-options:        -Weverything
                      -fno-warn-all-missed-specialisations
                      -fno-warn-missing-deriving-strategies
                      -fno-warn-missing-import-lists
                      -fno-warn-missing-safe-haskell-mode
                      -fno-warn-prepositive-qualified-module
                      -fno-warn-safe
                      -fno-warn-unsafe

  if (!flag(development))
    ghc-options:      -Werror

test-suite bcc-prelude-test-suite
  hs-source-dirs:     test
  main-is:            test.hs
  type:               exitcode-stdio-1.0
  other-modules:      Test.Bcc.Prelude.GHC.Heap.NormalFormSpec
                      Test.Bcc.Prelude.GHC.Heap.SizeSpec
                      Test.Bcc.Prelude.GHC.Heap.TreeSpec

  build-depends:      base
                    , bytestring
                    , bcc-prelude
                    , bcc-prelude-test
                    , ghc-heap
                    , ghc-prim
                    , hedgehog
                    , text
  default-language:   Haskell2010
  default-extensions: NoImplicitPrelude
  ghc-options:        -Weverything
                      -fno-warn-missing-import-lists
                      -fno-warn-unsafe
                      -fno-warn-safe
                      -threaded
                      -rtsopts
                      -fno-warn-missing-deriving-strategies
                      -fno-warn-missing-safe-haskell-mode
                      -fno-warn-prepositive-qualified-module

  if (!flag(development))
    ghc-options:      -Werror
