cabal-version: 2.2

name:                 bcc-prelude
version:              0.1.0.0
synopsis:             A Prelude replacement for the Bcc-Coin project
description:          A Prelude replacement for the Bcc-Coin project
license:              MIT
license-file:         LICENSE
author:               Bcc-Coin/Robert Mourey Jr
maintainer:           operations@bcc-coin.org
copyright:            2021
category:             Currency
build-type:           Simple
extra-source-files:   README.md cbits/hashset.h cbits/worklist.h

flag development
  description: Disable `-Werror`
  default: False
  manual: True

library
  hs-source-dirs:     src
  exposed-modules:    Bcc.Prelude
                      Data.Semigroup.Action
  other-modules:      Bcc.Prelude.Base
                      Bcc.Prelude.Error
                      Bcc.Prelude.Formatting
                      Bcc.Prelude.GHC.Heap
                      Bcc.Prelude.GHC.Heap.NormalForm
                      Bcc.Prelude.GHC.Heap.Size
                      Bcc.Prelude.GHC.Heap.Tree
                      Bcc.Prelude.HeapWords
                      Bcc.Prelude.Json.Canonical
                      Bcc.Prelude.Json.Parse
                      Bcc.Prelude.Orphans
                      Bcc.Prelude.Strict

  build-depends:      base               >= 1.0      && < 4.15
                    , aeson
                    , array
                    , base16-bytestring  >= 1
                    , bytestring
                    , canonical-json
                    , cborg
                    , containers
                    , formatting
                    , ghc-heap
                    , ghc-prim
                    , integer-gmp
                    , mtl
                    , protolude
                    , tagged
                    , text
                    , time
                    , vector
  default-language:   Haskell2010
  default-extensions: NoImplicitPrelude
  c-sources:          cbits/hashset.c
                      cbits/worklist.c
                      cbits/closure_size.c
  ghc-options:        -Weverything
                      -fno-warn-all-missed-specialisations
                      -fno-warn-missing-deriving-strategies
                      -fno-warn-missing-import-lists
                      -fno-warn-missing-safe-haskell-mode
                      -fno-warn-prepositive-qualified-module
                      -fno-warn-safe
                      -fno-warn-unsafe
  cc-options:         -Wall

  if (!flag(development))
    ghc-options:      -Werror
